# NodeWeave

./: .dockerignore  .gitignore  Makefile  README.md  go.work
.github/workflows/: ci.yml
clients/: README.md
clients/desktop-qt/: CMakeLists.txt  README.md
clients/desktop-qt/resources/: nodeweave-desktop.desktop.in  nodeweave.desktop.in  resources.qrc
clients/desktop-qt/src/: ControlPlaneClient.cpp  ControlPlaneClient.h  LocalDeviceInventory.cpp  LocalDeviceInventory.h  MainWindow.cpp  MainWindow.h  main.cpp
clients/linux-agent/: Makefile  README.md  go.mod
clients/linux-agent/cmd/linux-agent/: main.go
clients/linux-agent/configs/: linux-agent.example.json
clients/linux-agent/deploy/systemd/: nodeweave-linux-agent.service
clients/linux-agent/internal/agent/: agent.go  agent_test.go  forwarding_runtime.go  identity.go  identity_test.go
clients/linux-agent/internal/config/: config.go  config_test.go
clients/linux-agent/internal/state/: direct_attempt_report.go  state.go  state_test.go
clients/linux-cli/: Makefile  README.md  go.mod
clients/linux-cli/cmd/linux-cli/: main.go
clients/linux-cli/internal/state/: state.go  state_test.go
clients/windows-agent/: Makefile  README.md  go.mod
clients/windows-agent/cmd/windows-agent/: main.go
clients/windows-agent/configs/: windows-agent.example.json
clients/windows-agent/internal/agent/: agent.go  agent_test.go
clients/windows-agent/internal/config/: config.go
clients/windows-agent/internal/state/: state.go  state_test.go
clients/windows-cli/: Makefile  README.md  go.mod
clients/windows-cli/cmd/windows-cli/: main.go
clients/windows-cli/internal/state/: state.go
deployments/local/: docker-compose.yml
docs/: architecture.md  codex-multi-agent-team.md  prd.md  reference-map.md  task-breakdown.md
gateways/: README.md
mobile/: README.md
scripts/: codex_cli_multi_agent_team.py  codex_multi_agent_team.py  e2e_smoke.sh  requirements-codex-agents.txt
scripts/tests/: test_codex_cli_multi_agent_team.py
services/: README.md
services/controlplane/: Dockerfile  Makefile  README.md  go.mod
services/controlplane/cmd/controlplane/: main.go
services/controlplane/configs/: controlplane.env.example
services/controlplane/internal/config/: config.go
services/controlplane/internal/httpapi/: server.go  server_test.go
services/controlplane/internal/store/: direct_attempts.go  direct_attempts_test.go  errors.go  factory.go  memory.go  memory_test.go  sqlite.go  sqlite_test.go  store.go
services/relay/: Dockerfile  Makefile  README.md  go.mod
services/relay/cmd/relay/: main.go
services/relay/internal/config/: config.go
(+3 files in other folders)
